Thu Dec 11 11:51:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_locale_encoding): removed Encoding::LOCALE.

	* encoding.c (rb_enc_set_default_external): ditto.

	* encoding.c (rb_enc_set_default_internal): ditto.

Thu Dec 11 11:11:03 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/st.h (size_t): needs stddef.h or stdlib.h.
	  [ruby-core:20339]

Thu Dec 11 10:25:25 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_bignum.rb (TestBignum#test_convert): remove
	  platform dependent call of Process.wait.  coverage should be
	  accomplished by other method.  [ruby-dev:36062]

Thu Dec 11 10:18:35 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/document.rb (REXML::Document#write): require
	  rexml/formatters/transitive if transitive flag is on.  a patch
	  from akira yamada in [ruby-dev:36230].  fix #553

	* lib/rexml/element.rb (REXML::Element#write): ditto.

	* lib/rexml/formatters/transitive.rb (REXML::Formatters::Transitive#write_element): 
	  add hack for IE.  [ruby-dev:36230]

Thu Dec 11 02:37:22 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* math.c (domain_check): should not raise EDOM exception for NaN
	  value if operand is also NaN.  affects acos, asin, acosh, atanh,
	  log, log2, log10, sqrt, gamma, lgamma. [ruby-dev:37357]

Thu Dec 11 02:23:51 2008  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb (Open3.pipeline_start): return an array of threads if a
	  block is not given.

Thu Dec 11 01:48:00 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_round): should be round
	  to integer.  [ruby-dev:37355]

	* ext/bigdecimal/bigdecimal.c (BigDecimal_divmod): division should
	  be integer.  [incompatible] [ruby-dev:37355]

Thu Dec 11 01:21:58 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* thread.c (rb_mutex_unlock): shut up warning.  a patch from
	  Kazuhiro NISHIYAMA in [ruby-dev:37345]. fix #846

Wed Dec 10 23:58:56 2008  Tadayoshi Funaba  <tadf@dotrb.org>
